<resources>
    <string name="app_name">InternetReader</string>
    <string name="title">Title</string>
    <string name="writer">Writer</string>
    <string name="genre">Genre</string>
    <string name="release_date">Release Date</string>
    <string name="view_book">View this Book</string>
    <string name="buy_book" />
    <string name="buy_book2">Buy this Book</string>
    <string name="number">No.</string>
    <string name="book_by">by ${result.artistName}</string>
    <string name="failure_message">Failed to Display Results. Please check your internet connection and restart the app.</string>
</resources>
